# Fact_Checking_News_Aggregator

./: README.md  mcp_server.py  orchestrator.py  pyproject.toml  requirements.txt  run_all_agents.py
_site/: README.md  mcp_server.py  orchestrator.py  orchestrator_client.py  requirements.txt
_site/agents/crawler_agent/: agent_base.py  config.yaml
_site/agents/extractor_agent/: extractor_agent.py
_site/agents/fact_checker_agent/: config.yaml  fact_checker_agent.py
_site/agents/publisher_agent/: publisher_agent.py
_site/jekyll_site/: index.html
agents/crawler_agent/: agent_base.py
agents/extractor_agent/: config.yaml  extractor_agent.py
agents/fact_checker_agent/: fact_checker_agent.py
agents/publisher_agent/: config.yaml  publisher_agent.py
jekyll_site/: _config.yml  index.md
jekyll_site/_layouts/: default.html
jekyll_site/_posts/: 2025-07-15-2864547126247160046.md  2025-07-15-3004411212928008815.md  2025-07-15-4349672278584982409.md  2025-07-15-5509158392669669474.md  2025-07-15-5576015019926419630.md  2025-07-15-8217946894176547685.md
jekyll_site/_site/: feed.xml  index.html
jekyll_site/_site/2025/07/15/: 2864547126247160046.html  3004411212928008815.html  4349672278584982409.html  5509158392669669474.html  5576015019926419630.html  8217946894176547685.html
